[tool.poetry]
name = "monadcount-api"
version = "0.1.0"
description = "API Service for data collection from monadcount-sniffer"
authors = ["Jakub Dubec <jakub.dubec@stuba.sk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
sqlmodel = "^0.0.22"
python-multipart = "^0.0.17"
alembic = "^1.13.3"
geoalchemy2 = "^0.15.2"
psycopg = {version = "^3.1.19", extras = ["c"]}
pydantic-settings = "^2.6.1"
jinja2 = "^3.1.4"
wheel = { version = "^0.43.0", optional = true }
uvloop = { version = "^0.19.0", optional = true }
sentry-sdk = "^2.17.0"

[tool.poetry.extras]
docker = ["wheel", "uvloop"]

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[tool.black]
line-length = 119
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.github
  | .env
  | .venv
  | data
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
