[tool.poetry]
name = "monadcount-api"
version = "0.1.0"
description = "API Service for data collection from monadcount-sniffer"
authors = ["Jakub Dubec <jakub.dubec@stuba.sk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
sqlmodel = "^0.0.22"
python-multipart = "^0.0.17"
alembic = "^1.13.3"
geoalchemy2 = "^0.15.2"
psycopg = {version = "^3.1.19", extras = ["c"]}
pydantic-settings = "^2.6.1"
jinja2 = "^3.1.4"
sentry-sdk = "^2.17.0"

[tool.poetry.group.dev.dependencies]
black = {version = "^24.10.0", extras = ["jupyter"]}

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^4.3.0"
pandas = "^2.2.3"


[tool.poetry.group.docker.dependencies]
wheel = "^0.45.0"
uvloop = "^0.21.0"
pyyaml = "^6.0.2"

[tool.black]
line-length = 119
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.github
  | .env
  | .venv
  | data
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
