[tool.poetry]
name = "monadcount-api"
version = "0.3.0"
description = "API Service for data collection from monadcount-sniffer"
authors = ["Jakub Dubec <jakub.dubec@stuba.sk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
sqlmodel = "^0.0.24"
python-multipart = "^0.0.20"
alembic = "^1.15.1"
geoalchemy2 = "^0.17.1"
psycopg = {version = "^3.1.19", extras = ["c"]}
pydantic-settings = "^2.8.1"
jinja2 = "^3.1.6"
sentry-sdk = "^2.24.1"
dramatiq = {version = "^1.17.1", extras = ["redis"]}
clickhouse-connect = "^0.8.6"
alembic-postgresql-enum = "^1.7.0"
pydantic-extra-types = "^2.10.3"

[tool.poetry.group.dev.dependencies]
black = {version = "^25.1", extras = ["jupyter"]}

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^4.3.6"
pandas = "^2.2.3"

[tool.poetry.group.docker.dependencies]
wheel = "^0.45.0"
uvloop = "^0.21.0"
pyyaml = "^6.0.2"

[tool.black]
line-length = 119
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.github
  | .env
  | .venv
  | data
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
